test/corpus/function.txt
================================================================================
Function
================================================================================

contract Example {
    function exampleFunction () {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        body: (function_body)))))

================================================================================
Function with argument
================================================================================

contract Example {
    function exampleFunction (string argument) {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        (parameter
          type: (type_name
            (primitive_type))
          name: (identifier))
        body: (function_body)))))

================================================================================
Function with return type
================================================================================

contract Example {
    function exampleFunction () returns (string, uint256 element) {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        return_type: (return_type_definition
          (parameter
            type: (type_name
              (primitive_type)))
          (parameter
            type: (type_name
              (primitive_type))
            name: (identifier)))
        body: (function_body)))))

================================================================================
Function with visibility, mutability, modifier and virtual
================================================================================

contract Example {
    function exampleFunction () payable external onlyOwner virtual returns (string, uint256 element) {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        (state_mutability)
        (visibility)
        (modifier_invocation
          (identifier))
        (virtual)
        return_type: (return_type_definition
          (parameter
            type: (type_name
              (primitive_type)))
          (parameter
            type: (type_name
              (primitive_type))
            name: (identifier)))
        body: (function_body)))))

================================================================================
Function with override
================================================================================

contract Example {
    function exampleFunction () override {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        (override_specifier)
        body: (function_body)))))

================================================================================
Function with explicit override
================================================================================

contract Example {
    function exampleFunction () override (element.name, item) {}
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        (override_specifier
          (identifier)
          (identifier)
          (identifier))
        body: (function_body)))))

================================================================================
Function without block
================================================================================

contract Example {
    function exampleFunction ();
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)))))

================================================================================
Function not in contract
================================================================================

function exampleFunction ();

--------------------------------------------------------------------------------

(source_file
  (function_definition
    function_name: (identifier)))

================================================================================
Function with function argument
================================================================================

contract Example{
    function query1_fnc(function() external _fnc) external {
    }
}

--------------------------------------------------------------------------------

(source_file
  (contract_declaration
    name: (identifier)
    body: (contract_body
      (function_definition
        function_name: (identifier)
        (parameter
          type: (type_name
            (visibility))
          name: (identifier))
        (visibility)
        body: (function_body)))))
